[tool.poetry]
authors = ["The SapientML Authors"]
description = "A SapientML plugin of SapientMLGenerator"
license = "Apache-2.0"
maintainers = [
  "Kosaku Kimura <kimura.kosaku@fujitsu.com>",
  "Akira Ura <ura.akira@fujitsu.com>",
]
name = "sapientml-core"
version = "0"

[tool.poetry.dependencies]
catboost = ">=1.2.3"
imbalanced-learn = ">=0.11,<0.13"
ipykernel = "^6.25.1"
japanize-matplotlib = "^1.1.3"
jinja2 = "^3.1.2"
libcst = "^1.0.1"
lightgbm = "^4.0.0"
nbconvert = "^7.7.4"
nbformat = "^5.9.2"
nltk = "^3.8.1"
numba = ">=0.57.1,<0.61.0"
optuna = "^3.2.0"
python = ">=3.9,<3.13"
sapientml = "*"
scikit-learn = "1.3.2"
scipy = "^1.11.1"
seaborn = ">=0.12.2,<0.14.0"
shap = ">=0.43,<0.46"
tqdm = "^4.66.1"
xgboost = ">=1.7.6,<3.0.0"
mecab-python3 = "^1.0.6"
ipadic = "^1.0.0"
fasttext-wheel = "^0.9.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.7,<25.0"
flake8 = ">=6.1,<8.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pysen = ">=0.10.5,<0.12.0"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4.1,<6.0"
pytest-xdist = "^3.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.plugins."sapientml.config"]
sapientml = "sapientml_core:SapientMLConfig"

[tool.poetry.plugins."sapientml.pipeline_generator"]
sapientml = "sapientml_core:SapientMLGenerator"

[tool.poetry.plugins."sapientml.datastore"]
localfile = "sapientml_core.datastore.localfile:LocalFile"

[tool.poetry.plugins."sapientml.preprocess"]
default = "sapientml_core.preprocess.default:DefaultPreprocess"

[tool.poetry.plugins."sapientml.export_modules"]
sample-dataset = "sapientml_core.datastore.localfile.export_modules"

[tool.pysen]
version = "0.10"

[tool.pysen-cli]
settings_dir = ".pysen"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 120
py_version = "py310"

[tool.pysen.lint.source]
includes = ["sapientml_core/", "tests/"]

[tool.pytest.ini_options]
addopts = "-s -x --cov=sapientml_core"
testpaths = ["tests"]
