[project]
name = "sapientml-core"
version = "0"
description = "A SapientML plugin of SapientMLGenerator"
license = { text = "Apache-2.0" }
authors = [{ name = "The SapientML Authors" }]
maintainers = [
  { name = "Kosaku Kimura", email = "kimura.kosaku@fujitsu.com" },
  { name = "Akira Ura", email = "ura.akira@fujitsu.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
  "catboost>=1.2.3",
  "imbalanced-learn>=0.11,<0.15",
  "ipykernel>=6.25.1,<8.0.0",
  "japanize-matplotlib>=1.1.3,<2.0.0",
  "jinja2>=3.1.2,<4.0.0",
  "langdetect>=1.0.9",
  "libcst>=1.0.1,<2.0.0",
  "lightgbm>=4.0.0,<5.0.0",
  "nbconvert>=7.7.4,<8.0.0",
  "nbformat>=5.9.2,<6.0.0",
  "nltk>=3.8.1,<4.0.0",
  "numba>=0.61.0,<0.65.0",
  "optuna>=3.2,<5.0",
  "sapientml",
  "scikit-learn>=1.6.1,<2.0",
  "scipy>=1.14.0,<2.0.0",
  "seaborn>=0.12.2,<0.14.0",
  "shap>=0.43,<0.52",
  "tqdm>=4.66.1,<5.0.0",
  "xgboost>=1.7.6,<3.0.0",
  "mecab-python3>=1.0.6,<2.0.0",
  "ipadic>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
  "black>=23.7,<27.0",
  "flake8>=6.1,<8.0",
  "isort>=5.12,<9.0",
  "pre-commit>=3.3.3,<5.0.0",
  "pysen>=0.10.5,<0.13.0",
  "pytest>=7.4,<10.0",
  "pytest-cov>=4.1,<8.0",
  "pytest-xdist>=3.3.1,<4.0.0",
]

[project.entry-points."sapientml.config"]
sapientml = "sapientml_core:SapientMLConfig"

[project.entry-points."sapientml.pipeline_generator"]
sapientml = "sapientml_core:SapientMLGenerator"

[project.entry-points."sapientml.datastore"]
localfile = "sapientml_core.datastore.localfile:LocalFile"

[project.entry-points."sapientml.preprocess"]
default = "sapientml_core.preprocess.default:DefaultPreprocess"

[project.entry-points."sapientml.export_modules"]
sample-dataset = "sapientml_core.datastore.localfile.export_modules"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sapientml_core"]

[tool.pysen]
version = "0.12.0"

[tool.pysen-cli]
settings_dir = ".pysen"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 120
py_version = "py310"

[tool.pysen.lint.source]
includes = ["sapientml_core/", "tests/"]

[tool.pytest.ini_options]
addopts = "-s -x --cov=sapientml_core"
testpaths = ["tests"]

[tool.uv]
override-dependencies = ["numpy>=1.19.5,<3.0.0"]
